objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>From central</description>
        <inlineHelpText>Distributor assignment</inlineHelpText>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adrel</fullName>
                </value>
                <value>
                    <fullName>Ahrim</fullName>
                </value>
                <value>
                    <fullName>AIS</fullName>
                </value>
                <value>
                    <fullName>Allied</fullName>
                </value>
                <value>
                    <fullName>Alma Electronic d.O.O</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Arrow Altech Distribution</fullName>
                </value>
                <value>
                    <fullName>Arrow Electronics Inc</fullName>
                </value>
                <value>
                    <fullName>Avnet</fullName>
                </value>
                <value>
                    <fullName>Avnet Inc</fullName>
                </value>
                <value>
                    <fullName>Bando</fullName>
                </value>
                <value>
                    <fullName>Bejoken</fullName>
                </value>
                <value>
                    <fullName>Biakom Ltd.</fullName>
                </value>
                <value>
                    <fullName>Boersig</fullName>
                </value>
                <value>
                    <fullName>Cablecraft</fullName>
                </value>
                <value>
                    <fullName>Carlton-Bates</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Arfine</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Chenpu</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Giant Link</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Jurmay</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Tongyida</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Voasun</fullName>
                </value>
                <value>
                    <fullName>CN Focus - WPG (China) Inc</fullName>
                </value>
                <value>
                    <fullName>Compel</fullName>
                </value>
                <value>
                    <fullName>Componenta Limited</fullName>
                </value>
                <value>
                    <fullName>Consorzio KCT</fullName>
                </value>
                <value>
                    <fullName>DAC Group</fullName>
                </value>
                <value>
                    <fullName>Dachs</fullName>
                </value>
                <value>
                    <fullName>Daetwyler (Distrelec)</fullName>
                </value>
                <value>
                    <fullName>Dalroad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_DUNS__c</fullName>
        <label>Domestic DUNS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EST_VALUE__c</fullName>
        <description>from central org</description>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <description>Rating given by Eloqua on leads  coming in through Central org.</description>
        <label>Eloqua Lead Rating</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score_Engagement__c</fullName>
        <label>Eloqua Lead Score - Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score_Profile__c</fullName>
        <label>Eloqua Lead Score - Profile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <description>Energy Record Id</description>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is used for a lookup to campaigns instead of the standard Salesforce Campaign lookup to ensure proper function of the lead routing process</description>
        <label>Event Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Lead_Business_Unit__c</fullName>
        <label>Event Lead Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Aerospace, Defense and Marine</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Sensors</fullName>
                </value>
                <value>
                    <fullName>Industrial &amp; Commercial Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Member_ID__c</fullName>
        <formula>CASESAFEID(Id) + CASESAFEID(Event_Campaign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Technology Day</fullName>
                </value>
                <value>
                    <fullName>Lunch &amp; Learn</fullName>
                </value>
                <value>
                    <fullName>Customer Fair</fullName>
                </value>
                <value>
                    <fullName>Supplier Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated with a lookup to the existing contact if the event lead email matches a contact email in Salesforce</description>
        <label>Existing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Lead_Link__c</fullName>
        <label>Existing Lead Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FAE_Tech_Engagement_Owner__c</fullName>
        <inlineHelpText>Please enter name(s) of FAEs in this field if this is a technical engagement.</inlineHelpText>
        <label>DTC FAE Tech Engagement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allen McClinton</fullName>
                </value>
                <value>
                    <fullName>Andrew Clingman</fullName>
                </value>
                <value>
                    <fullName>Jason Reisinger</fullName>
                </value>
                <value>
                    <fullName>John Wetzel</fullName>
                </value>
                <value>
                    <fullName>Matt Grimm</fullName>
                </value>
                <value>
                    <fullName>Michael Mazzone</fullName>
                </value>
                <value>
                    <fullName>Peter Vu</fullName>
                </value>
                <value>
                    <fullName>Rob Nichols</fullName>
                </value>
                <value>
                    <fullName>William McGee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FILTER_AGENT__c</fullName>
        <description>from central org</description>
        <label>FILTER AGENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finished_Products_Units__c</fullName>
        <inlineHelpText>Manufacturing units per annum</inlineHelpText>
        <label>Finished Products-Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_up_Activity__c</fullName>
        <label>Follow-up Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Event_Lead_Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone Call</fullName>
                    <default>true</default>
                    <label>Telephone Call</label>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Face-to-Face Meeting</fullName>
                </value>
                <value>
                    <fullName>Sample Request</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
                <value>
                    <fullName>Complaint Resolution</fullName>
                </value>
                <value>
                    <fullName>Innovation Team Follow-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Department__c</fullName>
        <inlineHelpText>Enter the function and/or the department of the Lead.
E.g. &quot;Team Leader Purchasing&quot;</inlineHelpText>
        <label>Function / Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_DUNS__c</fullName>
        <label>Global DUNS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Last_Call__c</fullName>
        <formula>(Now() - qbdialer__LastCallTime__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Last Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICT_Business_Days__c</fullName>
        <formula>(5*(FLOOR((TODAY()-DATE(1900,1,8))/7)) + MIN(5,MOD(TODAY()- DATE(1900,1,8),7)))-
(5*(FLOOR((DATEVALUE(ICT_Last_Modified_Status_Date__c)-DATE(1900,1,8) )/ 7)) + MIN(5,MOD(DATEVALUE(ICT_Last_Modified_Status_Date__c)-
DATE(1900,1,8),7)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICT Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICT_Default_Manager_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Manager Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICT_Default_Owner_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Owner Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICT_Last_Modified_Status_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Last Modified Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ICT_Owner_Manager_Id__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INITIATE_CHAT_EMAIL_PHONE__c</fullName>
        <description>central org</description>
        <inlineHelpText>number of Chats, Phone calls or e-mail communications with the TE PIC centre</inlineHelpText>
        <label>INITIATE CHAT EMAIL PHONE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Academic_Title__c</fullName>
        <label>Academic Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Additional_Salutation_1_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Salutation 1 Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Additional_Salutation_2_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Salutation 2 Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Additional_Salutation_3_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Salutation 3 Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Address_Salutation_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Salutation Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Address_Salutation__c</fullName>
        <label>Address Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Default_Address_Salutation__c</fullName>
        <label>Default Address Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Default_Letter_Salutation__c</fullName>
        <label>Default Letter Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITBsalutations__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese-Mandarin</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Macedonian</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portugese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITBsalutations__Letter_Salutation_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter Salutation Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Letter_Salutation__c</fullName>
        <label>Letter Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_please_specify__c</fullName>
        <inlineHelpText>If you have chosen &apos;Other&apos; in the Analysis checkbox, please specify</inlineHelpText>
        <label>If Other, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_Role_please_specify_4__c</fullName>
        <description>For use with &apos;Role&apos;</description>
        <label>If other Role, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_2__c</fullName>
        <inlineHelpText>If &apos;Other&apos; is chosen in the field &apos;Application Area&apos;, please specify</inlineHelpText>
        <label>If other, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_3__c</fullName>
        <label>If other, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for DND Inside Sales Team, check this while taking over the lead</inlineHelpText>
        <label>Inside Sales MQL Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Initial_Reassigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is for DND inside sales, it captures the first reassigned user information</inlineHelpText>
        <label>Inside Sales Initial Reassigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Initial_Reassignment_Date__c</fullName>
        <inlineHelpText>This is for DND Inside Sales Team, this is to capture the date time of reassignment</inlineHelpText>
        <label>Inside Sales Reassigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_MQL_Flag_Date__c</fullName>
        <inlineHelpText>DND inside sales, The value gets populated when the DND IS MQL Flag is selected</inlineHelpText>
        <label>Inside Sales MQL Flag Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Team__c</fullName>
        <label>Inside Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Inside Sales Americas</fullName>
                </value>
                <value>
                    <fullName>DND Inside Sales China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_in_the_following_TE_Products__c</fullName>
        <label>Product Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interest_in_the_following_solution__c</fullName>
        <label>Interest in the following solution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARISO Contactless Connectors</fullName>
                </value>
                <value>
                    <fullName>M8 Connector</fullName>
                </value>
                <value>
                    <fullName>M12 Connector / X-Coded</fullName>
                </value>
                <value>
                    <fullName>Sensor Solutions</fullName>
                </value>
                <value>
                    <fullName>Mini I/O Connector</fullName>
                </value>
                <value>
                    <fullName>RJ45 Connector</fullName>
                </value>
                <value>
                    <fullName>USB Connector</fullName>
                </value>
                <value>
                    <fullName>Cable Assemblies</fullName>
                </value>
                <value>
                    <fullName>AMPMODU Connectors</fullName>
                </value>
                <value>
                    <fullName>Dynamic Series Connectors</fullName>
                </value>
                <value>
                    <fullName>Terminal Blocks</fullName>
                </value>
                <value>
                    <fullName>Relays</fullName>
                </value>
                <value>
                    <fullName>Heavy Duty Connectors</fullName>
                </value>
                <value>
                    <fullName>Motorman Hybrid Connectors</fullName>
                </value>
                <value>
                    <fullName>Circular Plastic Connectors</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCoLeadRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Central Org originated Lead Rejected at BU org?</description>
        <label>IsCoLeadRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReassigned__c</fullName>
        <description>Workflow Rule IsReassigned</description>
        <label>IsReassigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Customer_Cde__c</fullName>
        <label>Key Customer Cde</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadRejectedDate__c</fullName>
        <description>The date when the lead is rejected.</description>
        <label>LeadRejectedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Activity_Source__c</fullName>
        <description>Shows the source from the last activity associated with the lead</description>
        <label>Last Activity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Banner Ads</fullName>
                </value>
                <value>
                    <fullName>Commercial Database</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>WEB activity (LDAP)</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Multimedia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>PIC  (RightNow)</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Third Party List and Database</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Info_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IMPORTANT: Once all the lead info has been entered, you must check this box, otherwise the lead will not go into the Industrial lead process and will never be assigned to a sales person.</inlineHelpText>
        <label>Lead Info Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Automatic running number for Leads</inlineHelpText>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Potential_Value__c</fullName>
        <description>from / to Central org</description>
        <label>Lead Potential Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Recipient__c</fullName>
        <description>stores the name of the lead recipient (obtained from Central through connection)</description>
        <label>Lead Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>lead score from central</description>
        <inlineHelpText>lead score based on central scoring model</inlineHelpText>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <description>From / to Central org</description>
        <inlineHelpText>Stage of the lead</inlineHelpText>
        <label>Lead Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_converted_Opportunity__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead converted Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_converted_accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead converted accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_converted_contacts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead converted contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_edited__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field once the lead is completely edited and all information entered</inlineHelpText>
        <label>Lead edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_info_captured_by_name__c</fullName>
        <inlineHelpText>Please enter the name of the sales person who has captured the lead information</inlineHelpText>
        <label>Lead info captured by (name Sales)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lietrature_Request_s__c</fullName>
        <description>specific literature requests</description>
        <label>Send Literature (download link or .pdf)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rail Overview</fullName>
                </value>
                <value>
                    <fullName>Wire &amp; Cable</fullName>
                </value>
                <value>
                    <fullName>Cable Identification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_of_Program_in_Years__c</fullName>
        <inlineHelpText>How long will the program run in years (maximum 9 years)</inlineHelpText>
        <label>Life of Program in Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Literature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is literature requested ?</inlineHelpText>
        <label>Literature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Further defines the customer site</description>
        <inlineHelpText>Please define the type of the customer site (multiple entries possible)</inlineHelpText>
        <label>Location Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design Center</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>